# search-api

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-aio-blue.yml  docker-compose-aio-green.yml  docker-compose-aio.yml  docker-compose-airflow.yml  docker-compose-elastic.yml  docker-compose-traefik.yml  mise.local.toml.example  mise.toml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  proposer-une-amélioration---.md  proposer-une-amélioration.md
.github/actions/notify/: action.yml
.github/linters/: mypy.ini
.github/workflows/: black.yml  conventional_commit.yml  deploy.yml  linting.yml  pipeline.yml  stale_branches.yml  workflow.yml
aio/: Dockerfile
aio/aio-proxy/: Makefile  README.md  pytest.ini  requirements.pip
aio/aio-proxy/aio_proxy/: .gitattributes  .gitignore  __main__.py  decorators.py  format_response.py  helper.py  helpers.py  index.py  main.py  parameters.py  response.py  routes.py  search_functions.py  secret.py  secrets.py  settings.py  utils.py
aio/aio-proxy/config/: aio_proxy.yaml
airflow/: .gitattributes  .gitignore  1_prepareDirs.sh  Dockerfile  README.md  airflow.cfg  refreshBagDags.sh  requirements.txt  secretfile.py  variables.py
airflow/scripts/: airflow-entrypoint.sh
app/: .gitattributes  .gitignore  Makefile  config.py  logging.py  main.py  requirements.pip  requirements.txt  router.py
app/controller/: field_validation.py  fondation_params_builder.py  fondation_params_model.py  search_params_builder.py  search_params_model.py
app/decorators/: http_exception.py
app/doc/: open-api.yml
app/elastic/: es_index.py  es_search_runner.py  fondation_runner.py  geo_search.py  text_search.py
app/exceptions/: exception_handlers.py  exceptions.py  siren.py
app/labels/: codes-NAF.json  departements.json  helpers.py  natures-entreprises.json  natures-juridiques.json  regions.json  sections-codes-NAF.json  tranches-effectifs.json
app/models/: fondation.py  fondation_response_builder.py  response.py  response_builder.py  unite_legale.py
app/request/: field_values.py  search_params_builder.py
app/response/: build_api_response.py  format_search_results.py  helpers.py  response_builder.py  response_model.py
app/routers/: admin.py  public.py
app/search/: es_search_runner.py  geo_search.py  text_search.py
app/service/: build_api_response.py  build_api_response_fondation.py  convention_collective.py  format_search_results.py  last_modified.py  search_type.py
app/utils/: cache.py  helpers.py  matomo.py  redis.py
elasticsearch/: Dockerfile
metricbeat/: elasticsearch-xpack.yml
testing/: .gitignore  KPIs_nginx_logs.ipynb  elastic_war.ipynb  execute_tests.py  extract_search_terms.ipynb  feedback_loop.ipynb  get_matomo_logs.ipynb  preprocess_test_datasets.ipynb  test_siret.ipynb
testing/.ipynb_checkpoints/: elastic_war-checkpoint.ipynb
testing/data/: elastic_wars.csv  elastic_wars_&_postgres.csv  elastic_wars_2.0.csv  elastic_wars_2.1.csv  elastic_wars_2.2.csv  elastic_wars_3.1.csv  elastic_wars_3.2.csv  elastic_wars_3.3.csv  elastic_wars_3.csv  list_searches_nginx.txt  matomo_logs_labelled.csv  matomo_logs_preprocessed.csv  nginx_logs_preprocessed.csv  results_matomo_v0.csv  results_nginx_v0.csv
(+315 files in other folders)
