[project]
name = "search-api"
version = "1.0.0"
requires-python = "==3.12.8"
description = "Codebase of the L'Annuaire des Entreprises API to search for any French company and retrieve its details."
authors = [
    { name = "L'Annuaire des Entreprises", email = "annuaire-entreprises@data.gouv.fr" },
]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    "elasticsearch==9.3.0",
    "requests==2.34.1",
    "elastic-apm==6.25.0",
    "sentry-sdk==2.63.0",
    "redis==7.0.1",
    "pydantic==2.13.2",
    "fastapi[standard]==0.137.2",
    "orjson==3.11.6",
    "pydantic-settings==2.14.2",
]

[project.optional-dependencies]
dev = ["PyYAML==6.0.2", "pytest==9.0.3"]

[project.urls]
API = "https://recherche-entreprises.api.gouv.fr/"
Repository = "https://github.com/annuaire-entreprises-data-gouv-fr/search-api"
Website = "https://annuaire-entreprises.data.gouv.fr/"

[tool.ruff]
lint.extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-vv"

[tool.mypy]
install_types = true
non_interactive = true
